--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -41,7 +41,7 @@
                         <div class="col-sm-12">
                             <div class="pull-right">
                               <a class="btn btn-secondary btn-import-course">Kurs importieren</a>
-                              <a href="/courses/add" class="btn btn-primary btn-add">Kurs anlegen</a>
+                              <a href="/courses/add" class="btn btn-primary btn-add" data-testid="CreateCourseButton">Kurs anlegen</a>
                            </div>
                         </div>
                     </div>
