--- a/views/files/forms/form-new-file.hbs
+++ b/views/files/forms/form-new-file.hbs
@@ -5,9 +5,9 @@
     <label for="file-ending">Dateityp:</label>
     <select class="custom-select mr-sm-2 form-control" id="file-ending">
         <option selected>Format auswählen</option>
-        <option value="docx">Word (docx)</option>
-        <option value="xlsx">Excel (xlsx)</option>
-        <option value="pptx">PowerPoint (pptx)</option>
+        <option value="docx">Textdokument (docx)</option>
+        <option value="xlsx">Tabelle (xlsx)</option>
+        <option value="pptx">Präsentation (pptx)</option>
     </select>
     <br />
     <br />
