include backend url for editor

--- a/views/topic/topic-edtr.hbs
+++ b/views/topic/topic-edtr.hbs
@@ -4,6 +4,9 @@
 
     {{#content "page"}}
         <div id="editor"></div>
+        <script>
+            var BACKEND_URL = "{{ backendUrl }}";
+        </script>
         <script type="text/javascript" src="{{edtrSource}}"></script>
     {{/content}}
 {{/extend}}
