new data security document 16042019

--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -7,7 +7,7 @@
             <div>
                 <a href="/impressum" target="_blank">Impressum</a>
                 <span> - </span>
-                <a href="/impressum#data_security" target="_blank">Datenschutzerklärung</a>
+                Datenschutzerklärung: <a href="/impressum#data_security" target="blank">HPI</a> / <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Datenschutzerklaerung-Muster-Schulen.pdf" target="blank">Muster Schulen</a>
                 <span> - </span>
                 <a href="mailto:info@schul-cloud.org?subject=Schul_Cloud%20Anfrage" target="_blank">Kontakt</a>
                 <span> - </span>
