--- a/views/registration/forms/einwilligungserklaerung.hbs
+++ b/views/registration/forms/einwilligungserklaerung.hbs
@@ -1,17 +1,26 @@
-<label>
-    <input name="{{prefix}}privacyConsent" type="checkbox" value="true" required/>
-    <span>Ich habe die <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Einwilligung/1-Datenschutzerklaerung.pdf" target="_blank">Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
-</label>
-<p class="explanation">Um die Nutzung der {{@root.theme.short_title}} zu ermöglichen, ist die Verarbeitung von personenbezogenen Daten der Nutzer erforderlich. Dies erfolgt ausschließlich entsprechend hoher gesetzlicher Datenschutz-Anforderungen. Das HPI verarbeitet nur die Daten, deren Erhebung unbedingt erforderlich ist und sorgt dafür, dass sie nicht in unbefugte Hände geraten. </p>
+{{#if prefix}}
+	<label>
+		<input name="{{prefix}}privacyConsent" type="checkbox" value="true" required/>
+		<span>Ich, <b data-from="parent_firstName"></b> <b data-from="parent_lastName"></b>, bin erziehungsberechtigt für <b data-from="firstName"></b> <b data-from="lastName"></b> und berechtigt, den anderen Elternteil bei den nachfolgenden Erklärungen zu vertreten.</span>
+	</label>
+	<p style="font-size: 8px;margin: 0;">&nbsp;</p>
 
-<label>
-    <input name="{{prefix}}thirdPartyConsent" type="checkbox" value="true" required/>
-    <span> Ich habe die <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Einwilligung/3-Informationen-zu-Inhalte-Anbietern.pdf" target="_blank">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein.</span>
-</label>
-<p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zum Schutz der Nutzeridentität auf Basis eines Pseudonyms. Die Nutzerdaten bleiben sicher im Kernbereich der {{@root.theme.short_title}}.</p>
+	<label>
+		<input name="{{prefix}}privacyConsent" type="checkbox" value="true" required/>
+		<span>Ich erkläre mich damit einverstanden, dass die personenbezogenen Daten meines Kindes entsprechend der <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Datenschutzerklaerung-Muster-Schulen.pdf" target="_blank">Datenschutzerklärung</a> der Schule in der {{@root.theme.title}} verarbeitet werden.</span>
+	</label>
+	<p class="explanation">Die Einwilligung ist freiwillig, das heißt, wenn Sie Ihre Einwilligung nicht erteilen, führt dies nicht zu Nachteilen für Ihr Kind im Unterricht.
+	Die Einwilligung kann jederzeit von Ihnen widerrufen werden. Eine kurze E-Mail mit der Erklärung des Widerrufes, der Angabe des Vor- und Nachnamens des Elternteils und des Kindes, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung">widerruf@schul-cloud.org</a>. Im Fall des Widerrufs löschen wir die auf Basis der Einwilligung gespeicherten personenbezogenen Daten unverzüglich, es sei denn, es besteht ein gesetzlicher Grund zur Aufbewahrung oder Sie oder Ihr Kind wollen vorher noch auf die gespeicherten Daten zugreifen.</p>
+{{else}}
+	<label>
+		<input name="{{prefix}}privacyConsent" type="checkbox" value="true" required/>
+		<span>Ich erkläre mich damit einverstanden, dass mein personenbezogenes Daten entsprechend der <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Datenschutzerklaerung-Muster-Schulen.pdf" target="_blank">Datenschutzerklärung</a> der Schule in der {{@root.theme.title}} verarbeitet werden.</span>
+	</label>
+	<p class="explanation">Die Einwilligung ist freiwillig, das heißt, wenn Sie Du Deine Einwilligung nicht erteilst, führt diese nicht zu Nachteilen für Dich im Unterricht.
+	Die Einwilligung kann jederzeit von Dir widerrufen werden. Eine kurze E-Mail mit der Erklärung des Widerrufes, der Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung">widerruf@schul-cloud.org</a>. Im Fall des Widerrufs löschen wir die auf Basis der Einwilligung gespeicherten personenbezogenen Daten unverzüglich, es sei denn, es besteht ein gesetzlicher Grund zur Aufbewahrung oder Du willst vorher noch auf die gespeicherten Daten zugreifen.</p>
+{{/if}}
 
 <label>
     <input name="{{prefix}}termsOfUseConsent" type="checkbox" value="true" required/>
-    <span>Ich habe die <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Einwilligung/4-Nutzungsbedingungen.pdf" target="_blank">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
+    <span>Ich habe die <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Nutzungsordnung-HPI-Schule-Schueler.pdf" target="_blank">Nutzungsordnung {{@root.theme.title}}</a> gelesen und stimme ihnen zu.</span>
 </label>
-<p class="explanation">Die Nutzung der {{@root.theme.short_title}} ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes {{@root.theme.short_title}}-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-cloud.org</a></p>
