--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -84,11 +84,7 @@
       <section data-panel="section-3">
         <h4>Einwilligungserklärung</h4>
         <p>Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der {{theme.short_title}} nutzen kann:</p>
-        <p>Ich, <b data-from="parent_firstName"></b> <b data-from="parent_lastName"></b>, bin erziehungsberechtigt für
-          <b data-from="firstName"></b>
-          <b data-from="lastName"></b>
-        und erkläre Folgendes:</p>
-          {{#embed "registration/forms/einwilligungserklaerung"}}{{/embed}}
+          {{#embed "registration/forms/einwilligungserklaerung" prefix="parent_"}}{{/embed}}
       </section>
 
 
