hide Themen & Aufgaben from teams I will not delete in case we repair that feature in teams

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -170,7 +170,8 @@
                 </div>
             </section>
 
-            <section class="row">
+            <!-- Vorerst ausblenden, bis wir Themen in Teams wieder unterstützen
+			<section class="row">
                 <div class="col-sm-12">
                     <h4>Themen & Aufgaben</h4>
                     <p>Finde alle Themen, Tools und Aufgaben zu diesem Team.</p>
@@ -178,7 +179,7 @@
                         Zur Themen-Übersicht
                     </a>
                 </div>
-            </section>
+            </section> -->
 
             <section class="row">
                 <div class="col-sm-12">
