--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -19,7 +19,7 @@
       <div class="dropdown dropdown-course minimal-button">
         <a class="btn btn-sm dropdown-toggle btn-course-dropdown" title="Weiteres" data-toggle="dropdown">
           <h4 id="page-title" class="course-headline">{{{stripOnlyScript ../name}}}</h4>
-          <i class="fa fa-cog"></i>
+          <i class="fa fa-cog i-cog"></i>
         </a>
         <div class="dropdown-menu dropdown-menu dropdown-menu-course">
           <a href="/courses/{{../_id}}/edit" class="dropdown-item btn-course-edit">
